test/compilable/test17434a.d
module test17434a;

private import imports.imp17434a;
public  import imports.imp17434b;
