test/fail_compilation/imports/diag5839.d
module imports.diag5839;

private int foo;
